Set up OAuth in Symfony with HWIOAuthBundle

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -173,3 +173,13 @@ old_sound_rabbit_mq:
             callback:         pelagos.rabbit.consumer.create_homedir
             queue_options:
                 name: 'create_homedir'
+
+hwi_oauth:
+    firewall_names: [main]
+    resource_owners:
+        google:
+            type:           google
+            client_id:      "%google_oauth_client_id%"
+            client_secret:  "%google_oauth_client_secret%"
+            scope:          "https://www.googleapis.com/auth/userinfo.email https://www.googleapis.com/auth/userinfo.profile"
+    use_referer: true
