--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,8 @@
         "friendsofsymfony/jsrouting-bundle": "^1.6",
         "php-amqplib/rabbitmq-bundle": "^1.9",
         "jsor/doctrine-postgis": "^1.1",
-        "opensoft/doctrine-postgres-types": "^1.2"
+        "opensoft/doctrine-postgres-types": "^1.2",
+        "hwi/oauth-bundle": "dev-master"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
