--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -27,3 +27,9 @@ services:
     pelagos.ldap:
         class: Pelagos\Component\Ldap\Ldap
         arguments: ["@pelagos.ldap_client","%ldap_bind_dn%","%ldap_bind_pw%","%ldap_people_ou%"]
+
+    pelagos.router:
+        public: false
+        class: Pelagos\Routing\Router
+        decorates: router
+        arguments: ["@pelagos.router.inner", "%pelagos.prefix%"]
