Made the issue tracking base URL a parameter.

--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -60,3 +60,7 @@ parameters:
     doi_api_user_name: apitest
     doi_api_password : apitest
     doi_api_shoulder : doi:10.5072/FK2
+
+    # Base URL for an issue tracking system use to track datasets (without trailing /).
+    # The issue tracking ticket identifier will be appended to this URL.
+    issue_tracking_base_url: ~
