Implemented HTTP download.

--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -64,3 +64,6 @@ parameters:
     # Google OAuth client id and secret used by HWIOAuthBundle.
     google_oauth_client_id: ~
     google_oauth_client_secret: ~
+
+    download_base_directory: /san/home/http/download
+    download_base_url: ~
