Added custom OAuthUserProvider that extends HWI's
When loading an OAuthUser, this custom provider:
* sets the username to the user's email address
* sets the following session variables:
  * guestAuth = true
  * guestAuthType = oauth2
  * guestAuthProvider = (OAuth provider used)
  * guestAuthUser = (email address of user)

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,3 +1,6 @@
+parameters:
+    hwi_oauth.user.provider.class: Pelagos\Bundle\AppBundle\Security\OAuthUserProvider
+
 security:
 
     # leave session alone
