--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -52,6 +52,9 @@ doctrine:
         charset:  UTF8
 
     orm:
+        metadata_cache_driver: apc
+        query_cache_driver: apc
+        result_cache_driver: apc
         mappings:
             Pelagos:
                 type: annotation
