--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,8 @@
         "php-amqplib/rabbitmq-bundle": "^1.9",
         "jsor/doctrine-postgis": "^1.1",
         "opensoft/doctrine-postgres-types": "^1.2",
-        "hwi/oauth-bundle": "dev-master"
+        "hwi/oauth-bundle": "dev-master",
+        "phobetor/rabbitmq-supervisor-bundle": "^1.5"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
