Added comment about phobetor_rabbitmq_supervisor.consumers parameter

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -10,6 +10,9 @@ parameters:
     jms_serializer.camel_case_naming_strategy.class: JMS\Serializer\Naming\IdenticalPropertyNamingStrategy
     router.request_context.host: "%hostname%"
     router.request_context.scheme: https
+    # This parameter is undocumented. By default rabbitmq-supervisor-bundle uses old_sound_rabbit_mq -> consumers
+    # from this config file to populate this parameter. As of rabbitmq-supervisor-bundle 1.5, only the array keys
+    # are used so the values can be null.
     phobetor_rabbitmq_supervisor.consumers:
         filer: ~
         create_homedir: ~
