Added an event listener for Account that emails DMs on creation

--- a/src/Pelagos/Bundle/AppBundle/Resources/config/services.yml
+++ b/src/Pelagos/Bundle/AppBundle/Resources/config/services.yml
@@ -49,6 +49,12 @@ services:
             - { name: kernel.event_listener, event: pelagos.entity.doi_request.doi_requested, method: onDoiRequested }
             - { name: kernel.event_listener, event: pelagos.entity.doi_request.doi_issued, method: onDoiIssued }
 
+    pelagos.account.listener:
+        class: Pelagos\Event\AccountListener
+        arguments: ["@twig", "@mailer", "@security.token_storage", "%mailer_from_addr%", "%mailer_from_name%", "@pelagos.entity.handler"]
+        tags:
+            - { name: kernel.event_listener, event: pelagos.entity.account.created, method: onCreated }
+
     pelagos.form.type.dif:
         class: Pelagos\Bundle\AppBundle\Form\DIFType
         arguments: ["@doctrine.orm.entity_manager", "@security.authorization_checker"]
