--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -93,9 +93,8 @@ swiftmailer:
     host:      "%mailer_host%"
     username:  "%mailer_user%"
     password:  "%mailer_password%"
-    spool:
-        type: file
-        path: '%kernel.root_dir%/spool'
+    antiflood:
+        threshold:            10
 
 fos_rest:
     view:
