--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -199,3 +199,60 @@ rabbit_mq_supervisor:
     supervisor_instance_identifier: "%pelagos_name%"
     commands:
         rabbitmq_consumer: rabbitmq:consumer -w %%2$s
+
+fos_elastica:
+    clients:
+        default: { host: localhost, port: 9200 }
+    indexes:
+        pelagos:
+            client: default
+            index_name: "%pelagos_name%"
+            types:
+                dataset:
+                    mappings:
+                        udi: ~
+                        title: ~
+                        abstract: ~
+                        availabilityStatus: ~
+                        identifiedStatus: ~
+                        researchGroup:
+                            type: 'nested'
+                            properties:
+                                id: ~
+                                name: ~
+                                fundingCycle:
+                                    type: 'nested'
+                                    properties:
+                                        id: ~
+                                        fundingOrganization:
+                                            type: 'nested'
+                                            properties:
+                                                id: ~
+                        datasetSubmission:
+                            type: 'nested'
+                            properties:
+                                authors: ~
+                                datasetFileTransferStatus: ~
+                                datasetFileUri: ~
+                                datasetFileSize: ~
+                                doi: ~
+                                restrictions: ~
+                        geometry:
+                            type: 'string'
+                            property_path: false
+                        simpleGeometry:
+                            type: 'geo_shape'
+                            property_path: false
+                        year:
+                            property_path: false
+                        estimatedStartDate:
+                            property_path: false
+                        estimatedEndDate:
+                            property_path: false
+                    persistence:
+                        driver: orm
+                        model: Pelagos\Entity\Dataset
+                        provider: ~
+                        listener:
+                            logger: true
+                        finder: ~
