New listener to update dataset.
This listener will update title and abstract when a dif, dataset submn, metadata are persisted.

--- a/src/Pelagos/Bundle/AppBundle/Resources/config/services.yml
+++ b/src/Pelagos/Bundle/AppBundle/Resources/config/services.yml
@@ -57,6 +57,11 @@ services:
         tags:
             - { name: kernel.event_listener, event: pelagos.entity.account.created, method: onCreated }
 
+    pelagos.dataset.listener:
+        class: Pelagos\Event\DatasetListener
+        tags:
+            - { name: doctrine.event_listener, event: postPersist }
+
     pelagos.form.type.dif:
         class: Pelagos\Bundle\AppBundle\Form\DIFType
         arguments: ["@doctrine.orm.entity_manager", "@security.authorization_checker"]
