--- a/src/Pelagos/Bundle/AppBundle/Resources/config/services.yml
+++ b/src/Pelagos/Bundle/AppBundle/Resources/config/services.yml
@@ -60,6 +60,9 @@ services:
     pelagos.doctrine.dataset.listener:
         class: Pelagos\Event\DoctrineDatasetListener
         tags:
+            - { name: doctrine.event_listener, event: preUpdate }
+            - { name: doctrine.event_listener, event: postUpdate }
+            - { name: doctrine.event_listener, event: prePersist }
             - { name: doctrine.event_listener, event: postPersist }
 
     pelagos.form.type.dif:
