--- a/composer.json
+++ b/composer.json
@@ -47,7 +47,8 @@
         "phobetor/rabbitmq-supervisor-bundle": "^1.5",
         "friendsofsymfony/elastica-bundle": "^3.2",
         "ruflin/elastica": "3.2.2 as 2.99.0",
-        "phayes/geophp": "^1.2"
+        "phayes/geophp": "^1.2",
+        "doctrine/doctrine-migrations-bundle": "^1.2"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
