--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -166,6 +166,7 @@ old_sound_rabbit_mq:
             connection:       default
             exchange_options: { name: 'dataset_submission', type: topic }
             callback:         pelagos.rabbit.consumer.dataset_submission.filer
+            qos_options:      { prefetch_count: 1, global: false }
             queue_options:
                 name: 'filer'
                 routing_keys:
@@ -176,6 +177,7 @@ old_sound_rabbit_mq:
             connection:       default
             exchange_options: { name: 'dataset_submission', type: topic }
             callback:         pelagos.rabbit.consumer.dataset_submission.retriever
+            qos_options:      { prefetch_count: 1, global: false }
             idle_timeout:     1
             queue_options:
                 name: 'retriever'
