--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -11,6 +11,11 @@ web_profiler:
     toolbar: true
     intercept_redirects: false
 
+doctrine:
+    orm:
+        metadata_cache_driver: array
+        query_cache_driver: array
+
 monolog:
     handlers:
         filer:
