Added rabbitmq consumer for hashing dataset file

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -187,6 +187,12 @@ old_sound_rabbit_mq:
             callback:         pelagos.rabbit.consumer.create_homedir
             queue_options:
                 name: 'create_homedir'
+        dataset_file_hasher:
+            connection:       default
+            exchange_options: { name: 'dataset_file_hasher', type: direct }
+            callback:         pelagos.rabbit.consumer.dataset_file_hasher
+            queue_options:
+                name: 'dataset_file_hasher'
 
 hwi_oauth:
     firewall_names: [main]
