--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -191,6 +191,7 @@ old_sound_rabbit_mq:
             connection:       default
             exchange_options: { name: 'dataset_file_hasher', type: direct }
             callback:         pelagos.rabbit.consumer.dataset_file_hasher
+            qos_options:      { prefetch_count: 1, global: false }
             queue_options:
                 name: 'dataset_file_hasher'
 
