--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -83,6 +83,7 @@ services:
         tags:
             - { name: monolog.processor, channel: filer }
             - { name: monolog.processor, channel: retriever }
+            - { name: monolog.processor, channel: dataset_file_hasher }
 
     pelagos.console.listener:
         class: Pelagos\Event\ConsoleListener
