Basic Dataset Submission API.

--- a/src/Pelagos/Bundle/AppBundle/Resources/config/routing_api.yml
+++ b/src/Pelagos/Bundle/AppBundle/Resources/config/routing_api.yml
@@ -87,3 +87,9 @@ metadata:
     resource: Pelagos\Bundle\AppBundle\Controller\Api\MetadataController
     name_prefix: metadata_
     prefix: metadata
+
+dataset_submission:
+    type: rest
+    resource: Pelagos\Bundle\AppBundle\Controller\Api\DatasetSubmissionController
+    name_prefix: dataset_submission_
+    prefix: dataset_submission
