Added a file upload controller and handler

--- a/src/Pelagos/Bundle/AppBundle/Resources/config/routing_api.yml
+++ b/src/Pelagos/Bundle/AppBundle/Resources/config/routing_api.yml
@@ -87,3 +87,9 @@ metadata:
     resource: Pelagos\Bundle\AppBundle\Controller\Api\MetadataController
     name_prefix: metadata_
     prefix: metadata
+
+upload:
+    type: rest
+    resource: Pelagos\Bundle\AppBundle\Controller\Api\UploadController
+    name_prefix: upload_
+    prefix: upload
