--- a/src/Pelagos/Bundle/AppBundle/Resources/config/services.yml
+++ b/src/Pelagos/Bundle/AppBundle/Resources/config/services.yml
@@ -91,3 +91,7 @@ services:
         arguments: ["@doctrine.orm.entity_manager", "@pelagos.util.data_store", "@logger"]
         tags:
             - { name: monolog.logger, channel: dataset_file_hasher }
+
+    pelagos.handler.upload:
+        class: Pelagos\Bundle\AppBundle\Handler\UploadHandler
+        arguments: ["%homedir_prefix%"]
