Added new GML service for GeoViz.

--- a/src/Pelagos/Bundle/AppBundle/Resources/config/routing.yml
+++ b/src/Pelagos/Bundle/AppBundle/Resources/config/routing.yml
@@ -26,3 +26,6 @@ NelmioApiDocBundle:
 
 pelagos_download:
     resource: Pelagos\Bundle\AppBundle\Controller\DownloadController
+
+pelagos_gml:
+    resource: Pelagos\Bundle\AppBundle\Controller\GmlController
