Migrated GeoViz templates to Symfony
Accessible at:
        ./geoviz/wizard_dialog.html
        ./geoviz/wizard_map.html

--- a/src/Pelagos/Bundle/AppBundle/Resources/config/routing.yml
+++ b/src/Pelagos/Bundle/AppBundle/Resources/config/routing.yml
@@ -26,3 +26,6 @@ NelmioApiDocBundle:
 
 pelagos_download:
     resource: Pelagos\Bundle\AppBundle\Controller\DownloadController
+
+pelagos_geoviz:
+    resource: "@PelagosAppBundle/Resources/config/routing_geoviz.yml"
