Boost DOI field to number of other fields searched for DOI + 1 to ensure DOI field matches are always on top

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -248,7 +248,7 @@ fos_elastica:
                                 datasetFileTransferStatus: ~
                                 datasetFileUri: ~
                                 datasetFileSize: ~
-                                doi: ~
+                                doi: { boost: 3 }
                                 restrictions: ~
                         geometry:
                             type: 'string'
