--- a/composer.json
+++ b/composer.json
@@ -48,7 +48,8 @@
         "friendsofsymfony/elastica-bundle": "^3.2",
         "ruflin/elastica": "3.2.2 as 2.99.0",
         "phayes/geophp": "^1.2",
-        "doctrine/doctrine-migrations-bundle": "^1.2"
+        "doctrine/doctrine-migrations-bundle": "^1.2",
+        "egulias/email-validator": "^1.2"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
