--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -36,7 +36,7 @@ parameters:
     # When to warn account holders of soon to expire passwords (as ISO 8601 durations)
     account_password_expiration_warn: [P7D, P1D]
     # If to check for 24 hour change and password already used.
-    account_enforce_strict_password_rules: true
+    account_less_strict_password_rules: false
 
     rabbit_mq_host: localhost
     rabbit_mq_port: 5672
