--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -163,6 +163,9 @@ old_sound_rabbit_mq:
         dataset_file_hasher:
             connection:       default
             exchange_options: { name: 'dataset_file_hasher', type: direct }
+        doi_issue:
+            connection:       default
+            exchange_options: { name: 'doi_issue', type: direct }
     consumers:
         filer:
             connection:       default
@@ -197,6 +200,13 @@ old_sound_rabbit_mq:
             qos_options:      { prefetch_count: 1, global: false }
             queue_options:
                 name: 'dataset_file_hasher'
+        doi_issue:
+            connection:       default
+            exchange_options: { name: 'doi_issue', type: direct }
+            callback:         pelagos.rabbit.consumer.doi_issue
+            qos_options:      { prefetch_count: 1, global: false }
+            queue_options:
+                name: 'doi_issue'
 
 hwi_oauth:
     firewall_names: [main]
