--- a/src/Pelagos/Bundle/AppBundle/Resources/config/services.yml
+++ b/src/Pelagos/Bundle/AppBundle/Resources/config/services.yml
@@ -84,12 +84,18 @@ services:
         arguments: ["@doctrine.orm.entity_manager", "@logger"]
         tags:
             - { name: monolog.logger, channel: create_homedir }
-            
+
     pelagos.rabbit.consumer.dataset_file_hasher:
         class: Pelagos\Bundle\AppBundle\Rabbit\Consumer\DatasetFileHasherConsumer
         arguments: ["@doctrine.orm.entity_manager", "@pelagos.util.data_store", "@logger"]
         tags:
             - { name: monolog.logger, channel: dataset_file_hasher }
+
+    pelagos.rabbit.consumer.doi_issue:
+        class: Pelagos\Bundle\AppBundle\Rabbit\Consumer\DoiConsumer
+        arguments: ["@doctrine.orm.entity_manager", "@logger", "@pelagos.event.entity_event_dispatcher"]
+        tags:
+            - { name: monolog.logger, channel: doi_issue }
 
     pelagos.handler.upload:
         class: Pelagos\Bundle\AppBundle\Handler\UploadHandler
