Initial implementation of a basic read-only mode.

--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -80,3 +80,6 @@ parameters:
     download_base_url: ~
 
     google_maps_api_key: ~
+
+    # Read-only parameters
+    pelagos_readonly_mode: false
