--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -11,6 +11,11 @@ services:
         tags:
             - { name: doctrine.event_listener, event: postConnect }
 
+    pelagos_optional_readonly.listener:
+        class: Pelagos\Event\OptionalReadOnlyListener
+        tags:
+            - { name: kernel.event_listener, event: kernel.controller, method: onKernelController }
+
     person_token_user_provider:
         class: Pelagos\Bundle\AppBundle\Security\PersonTokenUserProvider
         arguments: ["@doctrine.orm.entity_manager"]
