parameterized text for readonly mode

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -51,6 +51,7 @@ twig:
         "%kernel.root_dir%/../src/Pelagos/Bundle/AppBundle/Resources/views/Email": Email
     globals:
         google_maps_api_key: "%google_maps_api_key%"
+        pelagos_readonly_message: "%pelagos_readonly_message%"
 
 # Doctrine Configuration
 doctrine:
