--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -84,7 +84,9 @@ parameters:
     # Read-only parameters
     pelagos_readonly_mode: false
     pelagos_readonly_message: >
-        Replace this text with read-only
-        mode text. This is read from
-        app/config/parameters.yml and can be set
-        during operation.
+        The system is currently running in read-only mode.
+        Although data cannot be accepted at this time
+        nor any changes be made to it, you may still search, monitor
+        and download data. Please contact griidc@gomri.org for any
+        questions on concerns. We apologize for any inconvience this
+        may be causing and will return to normal operating mode soon.
