--- a/app/config/config_drupal_prod.yml
+++ b/app/config/config_drupal_prod.yml
@@ -26,6 +26,10 @@ monolog:
             type:     stream
             path:     "%kernel.logs_dir%/dataset_file_hasher.log"
             channels: ["dataset_file_hasher"]
+        doi_issue:
+            type:     stream
+            path:     "%kernel.logs_dir%/doi_issue.log"
+            channels: ["doi_issue"]
         main:
             type:         fingers_crossed
             action_level: error
