--- a/src/Pelagos/Bundle/AppBundle/Resources/config/services.yml
+++ b/src/Pelagos/Bundle/AppBundle/Resources/config/services.yml
@@ -34,7 +34,7 @@ services:
 
     pelagos.datasetsubmission.listener:
         class: Pelagos\Event\DatasetSubmissionListener
-        arguments: ["@twig", "@mailer", "@security.token_storage", "%mailer_from_addr%", "%mailer_from_name%", "@pelagos.entity.handler", "@pelagos.util.data_store", "@pelagos.util.mdapplogger"]
+        arguments: ["@twig", "@mailer", "@security.token_storage", "%mailer_from_addr%", "%mailer_from_name%", "@pelagos.entity.handler", "@old_sound_rabbit_mq.doi_issue_producer", "@pelagos.util.data_store", "@pelagos.util.mdapplogger"]
         tags:
             - { name: kernel.event_listener, event: pelagos.entity.dataset_submission.submitted, method: onSubmitted }
             - { name: kernel.event_listener, event: pelagos.entity.dataset_submission.resubmitted, method: onResubmitted }
@@ -84,7 +84,7 @@ services:
         arguments: ["@doctrine.orm.entity_manager", "@logger"]
         tags:
             - { name: monolog.logger, channel: create_homedir }
-            
+
     pelagos.rabbit.consumer.dataset_file_hasher:
         class: Pelagos\Bundle\AppBundle\Rabbit\Consumer\DatasetFileHasherConsumer
         arguments: ["@doctrine.orm.entity_manager", "@pelagos.util.data_store", "@logger"]
