--- a/src/Pelagos/Bundle/AppBundle/Resources/config/routing_ui.yml
+++ b/src/Pelagos/Bundle/AppBundle/Resources/config/routing_ui.yml
@@ -34,6 +34,9 @@ pelagos_dataset_submission_ui:
 pelagos_datset_monitoring_ui:
     resource: Pelagos\Bundle\AppBundle\Controller\UI\DatasetMonitoringController
 
+pelagos_dataset_summary_ui:
+    resource: Pelagos\Bundle\AppBundle\Controller\UI\DatasetSummaryController
+
 pelagos_publication_dataset_link_ui:
     resource: Pelagos\Bundle\AppBundle\Controller\UI\PublicationDatasetLinkController
 
