--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -88,5 +88,5 @@ parameters:
         Although data cannot be accepted at this time
         nor any changes be made to it, you may still search, monitor
         and download data. Please contact griidc@gomri.org for any
-        questions on concerns. We apologize for any inconvience this
+        questions on concerns. We apologize for any inconvenience this
         may be causing and will return to normal operating mode soon.
