--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -165,7 +165,7 @@ old_sound_rabbit_mq:
             exchange_options: { name: 'dataset_file_hasher', type: direct }
         doi_issue:
             connection:       default
-            exchange_options: { name: 'doi_issue', type: direct }
+            exchange_options: { name: 'doi_issue', type: topic }
     consumers:
         filer:
             connection:       default
@@ -202,11 +202,15 @@ old_sound_rabbit_mq:
                 name: 'dataset_file_hasher'
         doi_issue:
             connection:       default
-            exchange_options: { name: 'doi_issue', type: direct }
+            exchange_options: { name: 'doi_issue', type: topic }
             callback:         pelagos.rabbit.consumer.doi_issue
             qos_options:      { prefetch_count: 1, global: false }
             queue_options:
                 name: 'doi_issue'
+                routing_keys:
+                    - 'issue'
+                    - 'publish'
+                    - 'update'
 
 hwi_oauth:
     firewall_names: [main]
