--- a/src/Pelagos/Bundle/AppBundle/Resources/config/routing_ui.yml
+++ b/src/Pelagos/Bundle/AppBundle/Resources/config/routing_ui.yml
@@ -54,3 +54,6 @@ pelagos_mdapp_ui:
 
 pelagos_data_discovery_ui:
     resource: Pelagos\Bundle\AppBundle\Controller\UI\DataDiscoveryController
+
+pelagos_report_researchgroup_dataset_dif_controller_ui:
+    resource: Pelagos\Bundle\AppBundle\Controller\UI\ReportResearchgroupDatasetDifController
