Add the generic dispatcher service to services yml

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -78,6 +78,10 @@ services:
         class: Pelagos\Event\EntityEventDispatcher
         arguments: ["@event_dispatcher"]
 
+    pelagos.event.generic_dispatcher:
+        class: Pelagos\Event\GenericDispatcher
+        arguments: ["@event_dispatcher"]
+
     monolog.processor.process_id:
         class: Monolog\Processor\ProcessIdProcessor
         tags:
