replace generic_dispatcher with log_action_item_event_dispatcher in services.yml, remove GenericDispatcher and DownloadEvent

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -78,8 +78,8 @@ services:
         class: Pelagos\Event\EntityEventDispatcher
         arguments: ["@event_dispatcher"]
 
-    pelagos.event.generic_dispatcher:
-        class: Pelagos\Event\GenericDispatcher
+    pelagos.event.log_action_item_event_dispatcher:
+        class: Pelagos\Event\LogActionItemEventDispatcher
         arguments: ["@event_dispatcher"]
 
     monolog.processor.process_id:
