--- a/src/Pelagos/Bundle/AppBundle/Resources/config/routing.yml
+++ b/src/Pelagos/Bundle/AppBundle/Resources/config/routing.yml
@@ -5,6 +5,10 @@ pelagos_homepage:
 pelagos_admin:
     path:     /admin
     defaults: { _controller: PelagosAppBundle:Default:admin }
+    
+pelagos_sitemap:
+    path:     /sitemap.xml
+    defaults: { _controller: PelagosAppBundle:Default:showSiteMapXml }
 
 pelagos_ui:
     resource: "@PelagosAppBundle/Resources/config/routing_ui.yml"
