--- a/src/Pelagos/Bundle/AppBundle/Resources/config/routing_ui.yml
+++ b/src/Pelagos/Bundle/AppBundle/Resources/config/routing_ui.yml
@@ -57,3 +57,6 @@ pelagos_data_discovery_ui:
 
 pelagos_gomri_reports_ui:
     resource: Pelagos\Bundle\AppBundle\Controller\UI\GomriReportController
+
+pelagos_download_report_ui:
+    resource: Pelagos\Bundle\AppBundle\Controller\UI\DownloadReportController
