--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,7 @@
         "php-amqplib/rabbitmq-bundle": "^1.9",
         "jsor/doctrine-postgis": "^1.1",
         "opensoft/doctrine-postgres-types": "^1.2",
-        "hwi/oauth-bundle": "dev-master",
+        "hwi/oauth-bundle": "^0.5",
         "phobetor/rabbitmq-supervisor-bundle": "^1.5",
         "friendsofsymfony/elastica-bundle": "^4.0",
         "ruflin/elastica": "3.2.2 as 2.99.0",
