This is monkey-see / monkey-do sort of programming.  I followed the examples of what was in place. I don't understand the little I know about fos_elastica.  It seems to work.

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -266,6 +266,8 @@ fos_elastica:
                                 datasetFileUri: ~
                                 datasetFileSize: ~
                                 restrictions: ~
+                                placeKeywords: ~
+                                themeKeywords: ~
                         doi:
                             type: 'nested'
                             properties:
