--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -241,7 +241,7 @@ fos_elastica:
                 dataset:
                     mappings:
                         udi: ~
-                        title: ~
+                        title: { boost: 3 }
                         abstract: ~
                         availabilityStatus: ~
                         identifiedStatus: ~
@@ -266,8 +266,8 @@ fos_elastica:
                                 datasetFileUri: ~
                                 datasetFileSize: ~
                                 restrictions: ~
-                                placeKeywords: ~
-                                themeKeywords: ~
+                                placeKeywords: { boost: 3 }
+                                themeKeywords: { boost: 3 }
                         doi:
                             type: 'nested'
                             properties:
