Revert "Prevent tokenization of doi, udi strings"
This reverts commit 22a4942237b0ca80487528b39d1e01896e506602.

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -240,9 +240,7 @@ fos_elastica:
             types:
                 dataset:
                     mappings:
-                        udi:
-                            type : "string"
-                            index : "not_analyzed"
+                        udi: ~
                         title: ~
                         abstract: ~
                         availabilityStatus: ~
@@ -271,17 +269,11 @@ fos_elastica:
                         doi:
                             type: 'nested'
                             properties:
-                                doi:
-                                    boost: 3
-                                    type : "string"
-                                    index : "not_analyzed"
+                                doi: { boost: 3 }
                         publications:
                             type: 'nested'
                             properties:
-                                doi:
-                                    boost: 3
-                                    type : "string"
-                                    index : "not_analyzed"
+                                doi: { boost: 3 }
                         geometry:
                             type: 'string'
                             property_path: false
