--- a/src/Pelagos/Bundle/AppBundle/Resources/config/routing_ui.yml
+++ b/src/Pelagos/Bundle/AppBundle/Resources/config/routing_ui.yml
@@ -63,3 +63,6 @@ pelagos_gomri_reports_ui:
 
 pelagos_dataset_download_report_ui:
     resource: Pelagos\Bundle\AppBundle\Controller\UI\DatasetDownloadReportController
+
+pelagos_search_terms_report_ui:
+    resource: Pelagos\Bundle\AppBundle\Controller\UI\SearchTermsReportController
