--- a/src/Pelagos/Bundle/AppBundle/Resources/config/routing.yml
+++ b/src/Pelagos/Bundle/AppBundle/Resources/config/routing.yml
@@ -36,3 +36,7 @@ pelagos_geoviz:
 pelagos_metadata:
     path:     /metadata/{udi}
     defaults: { _controller: PelagosAppBundle:UI/Dataland:metadata }
+
+pelagos_datasetrestrictions:
+    path: /dataset-restrictions/{id}
+    defaults: { _controller: PelagosAppBundle:UI/DatasetRestrictions:post}
